--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #0f3666;
-    --card-front-color: #0e59b4;
-    --card-back-color: #359ebe;
+    --text-color: #DBE4EF;
+    --card-front-color: #144480;
+    --card-back-color: #00F4BF;
 }
 
 body {
@@ -77,13 +77,13 @@ body {
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-    background-color: rgba(38, 100, 194, 0.658);
+    background-color: rgba(0, 244, 191, 0.2);
     border: 4px solid var(--card-back-color);
 }
 
 footer {
-    background-color: rgba(18, 15, 170, 0.904);
-    color: rgb(17, 20, 173);
+    background-color: black;
+    color: white;
     position: fixed;
     bottom: 0;
     width: 100%;
